--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,55 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="stephane.castrec.hellokotlin4android.MainActivity">
+    tools:context="stephane.castrec.hellokotlin4android.MainActivity"
+    android:id="@+id/layout">
 
-    <TextView
-        android:text="Hello World!"
+    <EditText
+        android:hint="Hello Kotlin!"
+        android:id="@+id/edittxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edittxt"
+        android:layout_alignParentStart="true"
+        android:weightSum="3"
+        android:id="@+id/ll"
+        >
+
+
+        <Button
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_txt"
+            android:text="textview"
+            android:layout_weight="1"/>
+
+
+        <Button
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_toast"
+            android:text="Toast"
+            android:layout_weight="1"/>
+
+
+        <Button
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_snack"
+            android:text="Snackbar"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+    <TextView
+        android:hint="Hello Kotlin!"
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/ll"
+        android:layout_height="match_parent" />
 </RelativeLayout>
